--- a/baruco-2014/parade.css
+++ b/baruco-2014/parade.css
@@ -1,6 +1,6 @@
-/* @import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC); */
-/* @import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono); */
-/* @import url(http://fonts.googleapis.com/css?family=Ubuntu); */
+@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu);
 
 a {
   color: inherit;
@@ -33,7 +33,19 @@ pre {
   line-height: 1.3;
 }
 
-.content pre .result {
+.content pre.highlight .c1 {
+  color: #666;
+}
+
+.content pre.highlight .command {
+  font-size: 1.1em;
+  line-height: 1.2;
+  margin-bottom: -1em;
+}
+
+.content pre.highlight .result {
+  font-size: 1.1em;
+  line-height: 1.2;
   background: none;
 }
 
