--- a/rubyconf-pt-2014/css/theme/rubyconf-pt-2014.css
+++ b/rubyconf-pt-2014/css/theme/rubyconf-pt-2014.css
@@ -1,6 +1,6 @@
-/* @import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC); */
-/* @import url(http://fonts.googleapis.com/css?family=Ubuntu); */
-/* @import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono); */
+@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
 
 body {
   font-family:  'IM Fell English SC', serif;
@@ -66,5 +66,5 @@ body {
 }
 
 .reveal .slides {
-  top: 37%;
+  top: 40%;
 }
