ROSSConf Vienna 2015: putting the funny in for Mr @pferdefleisch

--- a/rossconf-2015/css/theme/rossconf-2015.css
+++ b/rossconf-2015/css/theme/rossconf-2015.css
@@ -75,6 +75,14 @@ body {
   width: 25%;
 }
 
+.reveal .ensure img {
+  width: 75%;
+}
+
+.reveal .nzkoz img {
+  width: 45%;
+}
+
 .reveal .reek {
   font-family: 'Courier New', monospace;
 }
