--- a/eurucamp-2013/parade.css
+++ b/eurucamp-2013/parade.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
 
 a {
   color: inherit;
