--- a/mixdes-2015/css/theme/mixdes-2015.css
+++ b/mixdes-2015/css/theme/mixdes-2015.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English);
+@import url(//fonts.googleapis.com/css?family=Ubuntu+Mono);
 
 body {
   font-family: 'IM Fell English', serif;
