--- a/phd-defence/phd-defence.css
+++ b/phd-defence/phd-defence.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
 
 body {
   background-color: black;
