--- a/quantum-2015-12/css/theme/quantum-2015-12.css
+++ b/quantum-2015-12/css/theme/quantum-2015-12.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC&subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English&subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono&subset=latin,latin-ext);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC&subset=latin,latin-ext);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English&subset=latin,latin-ext);
+@import url(//fonts.googleapis.com/css?family=Ubuntu+Mono&subset=latin,latin-ext);
 
 body {
   font-family: 'IM Fell English', serif;
