--- a/src-2011/src-2011.css
+++ b/src-2011/src-2011.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English);
-@import url(http://fonts.googleapis.com/css?family=Inconsolata);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English);
+@import url(//fonts.googleapis.com/css?family=Inconsolata);
 
 body {
   background-color: white;
