--- a/rossconf-2015/css/theme/rossconf-2015.css
+++ b/rossconf-2015/css/theme/rossconf-2015.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=Ubuntu+Mono);
 
 body {
   font-family: 'IM Fell English SC', serif;
