--- a/rubyday-2016/css/theme/rubyday-2016.css
+++ b/rubyday-2016/css/theme/rubyday-2016.css
@@ -1,7 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=Ubuntu);
+@import url(//fonts.googleapis.com/css?family=Ubuntu+Mono);
 
 body {
   font-family:  'IM Fell English SC', serif;
