--- a/euruko-2010/file/euruko-2010.css
+++ b/euruko-2010/file/euruko-2010.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English);
 
 body {
   font-family: 'IM Fell English SC', 'Georgia', serif;
