--- a/lightningio-2012/file/lightningio-2012.css
+++ b/lightningio-2012/file/lightningio-2012.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=Inconsolata);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=Inconsolata);
 
 a {
   color: inherit;
