--- a/lpw-2010/file/lpw-2010.css
+++ b/lpw-2010/file/lpw-2010.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
 
 a {
   color: inherit;
