--- a/wrug-2012-06/file/wrug-2012-06.css
+++ b/wrug-2012-06/file/wrug-2012-06.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=Inconsolata);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=Inconsolata);
 
 a {
   color: inherit;
