--- a/wrug-2012-08/file/wrug-2012-08.css
+++ b/wrug-2012-08/file/wrug-2012-08.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Inconsolata);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu);
+@import url(//fonts.googleapis.com/css?family=Inconsolata);
+@import url(//fonts.googleapis.com/css?family=IM+Fell+English+SC);
+@import url(//fonts.googleapis.com/css?family=Ubuntu);
 
 a {
   color: inherit;
