RGT 2019: fix font paths

--- a/rgt-2019/css/theme/chastell.css
+++ b/rgt-2019/css/theme/chastell.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'IM FELL English SC';
   src: local('IM FELL English SC'),
-       url('/IM FELL English SC.woff') format('woff');
+       url('../../IM FELL English SC.woff') format('woff');
 }
 
 @font-face {
   font-family: Ubuntu;
-  src: local(Ubuntu), url(/Ubuntu.woff) format('woff');
+  src: local(Ubuntu), url(../../Ubuntu.woff) format('woff');
 }
 
 @import url(//fonts.googleapis.com/css?family=Ubuntu+Mono);
