RubyDay 2016: fix fonts

--- a/rubyday-2016/css/theme/rubyday-2016.css
+++ b/rubyday-2016/css/theme/rubyday-2016.css
@@ -1,7 +1,15 @@
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English);
-@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
+@font-face {
+  font-family: 'IM FELL English SC';
+  src: local('IM FELL English SC'),
+       url('../../../IM FELL English SC.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: local('Ubuntu'), url('../../../Ubuntu.woff') format('woff');
+}
+
+@import url(//fonts.googleapis.com/css?family=Ubuntu+Mono);
 
 body {
   font-family:  'IM Fell English SC', serif;
